2001-09-25  Darin Adler  <darin@bentspoon.com>

	* test-60544.svg: Another test file, from another bug.

2001-09-25  Darin Adler  <darin@bentspoon.com>

	* test-61082.svg: Check in test file for bug. I should really
	do this more often.

2001-09-24  Darin Adler  <darin@bentspoon.com>

	* rsvg.h:
	* rsvg.c: (rsvg_pixbuf_from_file), (rsvg_pixbuf_from_file_at_zoom),
	(rsvg_pixbuf_from_file_at_size): Take const char *, not char *.

	* test-rsvg.c: (main): Remove unneeded casts. Restore the error
	message for the case when the parser doesn't parse anything.

2001-09-24  Darin Adler  <darin@bentspoon.com>

	* rsvg.c: (rsvg_entity_decl): Change so it can handle a NULL
	for the content passed in. Happens at least if the .svg file
	is empty and presumably in other cases.
	(rsvg_handle_free): Handle case where pixbuf is NULL.
	* test-rsvg.c: (main): Don't write anything out if a NULL
	pixbuf is returned. This can happen if the .svg file is
	empty.

2001-09-24  Darin Adler  <darin@bentspoon.com>

	* librsvg-2.0.pc.in: Update to point to libart 2.

2001-09-17  Darin Adler  <darin@bentspoon.com>

	* rsvg.h:
	* rsvg.c: (rsvg_text_handler_characters), (rsvg_set_fonts_dir):
	Roll back fonts_dir to be global like before. We can get rid
	of fonts_dir altogether when we port librsvg to use pango
	instead of using freetype directly.

2001-09-15  Darin Adler  <darin@bentspoon.com>

	* rsvg-paint-server.c: (rsvg_paint_server_lin_grad_free),
	(rsvg_paint_server_rad_grad_free): Fix some NULL dereferences.

	* rsvg.c: (rsvg_handle_write), (rsvg_handle_close): Add FIXME
	to places that have half-hearted attempt at handling GError.
	(rsvg_pixbuf_from_file_at_zoom), (rsvg_pixbuf_from_file_at_size):
	Handle case where fopen fails (but not the GError part).

2001-09-10  Jonathan Blandford   <jrb@redhat.com>

	* librsvg-features.c:
	* rsvg.c: (rsvg_start_svg), (rsvg_parse_style_arg),
	(rsvg_parse_style), (rsvg_parse_transform_attr),
	(rsvg_parse_style_attrs), (rsvg_push_opacity_group),